--- a/src/components/layout/LinkButton.module.css
+++ b/src/components/layout/LinkButton.module.css
@@ -1,5 +1,5 @@
 .btn {
-    background-color: gray;
+    background-color: rgb(27, 27, 27);
     color: #FFF;
     padding: 0.5em 1em;
     text-decoration: none;
