--- a/src/components/pages/Home.module.css
+++ b/src/components/pages/Home.module.css
@@ -19,10 +19,87 @@
 
 .home_container p {
     margin: 1.5em;
-    color: #535353;
+    color: rgb(27, 27, 27);
 }
 
 .home_container img {
     width: 450px;
     margin: 2em 0;
+}
+
+@media (max-width: 795px) {
+    .home_container {
+        padding: 2em;
+    }
+
+    .home_container h1 {
+        font-size: 2em;
+    }
+
+    .home_container p {
+        font-size: 1em;
+        margin: 1em 0;
+    }
+
+    .home_container img {
+        width: 100%;
+        max-width: 350px;
+    }
+}
+@media (max-width: 600px) {
+    .home_container h1 {
+        font-size: 1.5em;
+    }
+    
+    .home_container p {
+        font-size: 0.9em;
+    }
+
+    .home_container a {
+        font-size: 0.9em;
+    }
+}
+
+@media (max-width: 480px) {
+    .home_container {
+        padding: 1.5em;
+    }
+
+    .home_container h1 {
+        font-size: 1.4em;
+    }
+
+    .home_container p {
+        font-size: 0.9em;
+    }
+
+    .home_container a {
+        font-size: 0.8em;
+    }
+
+    .home_container img {
+        max-width: 250px;
+    }
+}
+
+@media (max-width: 430px) {
+    .home_container {
+        padding: 1.5em;
+    }
+
+    .home_container h1 {
+        font-size: 1.3em;
+    }
+
+    .home_container p {
+        font-size: 0.8em;
+    }
+
+    .home_container a {
+        font-size: 0.8em;
+    }
+
+    .home_container img {
+        max-width: 250px;
+    }
 }
